--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
-		"build": "astro build",
+		"build": "astro check && astro build",
 		"preview": "astro preview",
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/check": "^0.3.1",
 		"@astrojs/rss": "^3.0.0",
 		"@astrojs/sitemap": "^3.0.3",
 		"astro": "^3.5.5"
+	},
+	"devDependencies": {
+		"prettier": "^3.1.0",
+		"prettier-plugin-astro": "^0.12.2",
+		"typescript": "^5.3.2"
 	}
 }
