--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/rss": "^4.0.12",
 		"@astrojs/sitemap": "^3.4.2",
+		"@astrojs/vercel": "^8.2.5",
 		"astro": "^5.12.9"
 	},
 	"devDependencies": {
